--- a/assets/styles/scss/abstracts/_mixins.scss
+++ b/assets/styles/scss/abstracts/_mixins.scss
@@ -2,326 +2,7 @@
 // +  _mixins.scss: This partial file contains all Scss 'mixins'.
 // -----------------------------------------------------------------------------
 
-// -----------------------------------------------------------------------------
-// *  Layout
-// -----------------------------------------------------------------------------
-
-// #  <article>
-@mixin article {
-  background-color: $color--debug-1;
-  // ...
-}
-
-// #  <aside>
-@mixin aside {
-  background-color: $color--debug-2;
-  //...
-}
-
-// #  <footer>
-@mixin footer {
-  background-color: $color--debug-3;
-  //...
-}
-
-// #  <form>
-@mixin form {
-  background-color: $color--debug-4;
-  //...
-}
-
-// #  <header>
-@mixin header {
-  background-color: $color--debug-5;
-  //...
-}
-
-// #  <nav>
-@mixin nav {
-  background-color: $color--debug-6;
-  //...
-}
-
-// #  <section>
-@mixin section {
-  min-width: $dimension--xxs;
-  padding: $size--xxl;
-  background-color: $color--debug-7;
-  // ...
-
-  &__container {
-    @include block-container($dimension--l, fit-content);
-    // ...
-  }
-
-  &__title {
-    @include title;
-    // ...
-  }
-}
-
-// #  <table>
-@mixin table {
-  background-color: $color--debug-8;
-  //...
-}
-
-// -----------------------------------------------------------------------------
-// *  Containers
-// -----------------------------------------------------------------------------
-
-// #  Block-Container
-@mixin block-container($max-width, $max-height) {
-  display: block;
-  width: 100%;
-  max-width: $max-width;
-  max-height: $max-height;
-  padding: 0;
-  margin: 0 auto;
-}
-
-// #  Flex-Container ---> Parent
-@mixin flex-container($direction, $justify, $align, $wrap-type: nowrap) {
-  // #  Flex-Container--Nowrap
-  @if $wrap-type == nowrap {
-    display: flex;
-    flex-direction: $direction;
-    align-items: $align;
-    justify-content: $justify;
-  }
-  // #  Flex-Container--Wrap
-  @else if $wrap-type == wrap {
-    display: flex;
-    flex-direction: $direction;
-    align-content: $align;
-    justify-content: $justify;
-  }
-  // #  Invalid arguments!
-  @else {
-    @error '#{$wrap-type} is an unsupported breakpoint, choose between: wrap, nowrap.';
-  }
-}
-
-// #  Flex-Items ---> Children
-@mixin flex-items($basis: $dimension--xxs, $grow: 1, $shrink: 1) {
-  flex-basis: $basis;
-  flex-grow: $grow;
-  flex-shrink: $shrink;
-}
-
-// #  Inline-Flex-Container ---> buttons, navigation, vertical lists
-@mixin inline-flex-container($direction, $justify, $align) {
-  display: inline-flex;
-  flex-direction: $direction;
-  align-items: $align;
-  justify-content: $justify;
-}
-
-// #  Grid-Container
-@mixin grid-container() {
-  display: grid;
-  // ...
-}
-
-// -----------------------------------------------------------------------------
-// *  Components
-// -----------------------------------------------------------------------------
-
-// #  Card
-@mixin card {
-  background-color: $color--debug-9;
-  // ...
-}
-
-// #  Icon
-@mixin icon {
-  background-color: $color--debug-10;
-  // ...
-}
-
-// #  Switch
-@mixin switch {
-  background-color: $color--debug-11;
-  // ...
-}
-
-// -----------------------------------------------------------------------------
-// *  Forms
-// -----------------------------------------------------------------------------
-
-// #  <fieldset>
-@mixin fieldset {
-  background-color: $color--debug-12;
-  // ...
-}
-
-// #  <legend>
-@mixin legend {
-  background-color: $color--debug-13;
-  // ...
-}
-
-// #  <textarea>
-@mixin textarea {
-  background-color: $color--debug-14;
-  // ...
-}
-
-// #  <label>
-@mixin label {
-  background-color: $color--debug-15;
-  // ...
-}
-
-// #  <button>
-@mixin button {
-  background-color: $color--debug-16;
-  // ...
-}
-
-// #  <input>
-@mixin input {
-  background-color: $color--debug-17;
-  // ...
-}
-
-// -----------------------------------------------------------------------------
-// *  Typography
-// -----------------------------------------------------------------------------
-
-// #  Subject
-@mixin subject {
-  color: $color--subject;
-  font-family: $font-family--subject;
-  font-size: $font-size--subject;
-  font-variant: $font-variant--subject;
-  font-weight: $font-weight--subject;
-  letter-spacing: $letter-spacing--subject;
-  line-height: $line-height--subject;
-  text-align: $text-align--subject;
-  text-transform: $text-transform--subject;
-}
-
-// #  Title
-@mixin title {
-  color: $color--title;
-  font-family: $font-family--title;
-  font-size: $font-size--title;
-  font-variant: $font-variant--title;
-  font-weight: $font-weight--title;
-  letter-spacing: $letter-spacing--title;
-  line-height: $line-height--title;
-  text-align: $text-align--title;
-  text-transform: $text-transform--title;
-}
-
-// #  Subtitle
-@mixin subtitle {
-  color: $color--subtitle;
-  font-family: $font-family--subtitle;
-  font-size: $font-size--subtitle;
-  font-variant: $font-variant--subtitle;
-  font-weight: $font-weight--subtitle;
-  letter-spacing: $letter-spacing--subtitle;
-  line-height: $line-height--subtitle;
-  text-align: $text-align--subtitle;
-  text-transform: $text-transform--subtitle;
-}
-
-// #  Text
-@mixin text {
-  color: $color--text;
-  font-family: $font-family--text;
-  font-size: $font-size--text;
-  font-variant: $font-variant--text;
-  font-weight: $font-weight--text;
-  letter-spacing: $letter-spacing--text;
-  line-height: $line-height--text;
-  text-align: $text-align--text;
-  text-transform: $text-transform--text;
-}
-
-// -----------------------------------------------------------------------------
-// *  Breakpoints
-// -----------------------------------------------------------------------------
-
-@mixin breakpoint($breakpoint: xxs) {
-  // #  Breakpoint 1 - Extra Extra Small - 20rem / 320px
-  @if $breakpoint == xxs {
-    @media (min-width: $dimension--xxs) {
-      @content;
-    }
-  }
-  // #  Breakpoint 2 - Extra Small - 40rem / 640px
-  @else if $breakpoint == xs {
-    @media (min-width: $dimension--xs) {
-      @content;
-    }
-  }
-  // #  Breakpoint 3 - Small - 60rem / 960px
-  @else if $breakpoint == s {
-    @media (min-width: $dimension--s) {
-      @content;
-    }
-  }
-  // #  Breakpoint 4 - Medium - 80rem / 1280px
-  @else if $breakpoint == m {
-    @media (min-width: $dimension--m) {
-      @content;
-    }
-  }
-  // #  Breakpoint 5 - Large - 100rem / 1600px
-  @else if $breakpoint == l {
-    @media (min-width: $dimension--l) {
-      @content;
-    }
-  }
-  // #  Breakpoint 6 - Extra Large - 120rem / 1920px
-  @else if $breakpoint == xl {
-    @media (min-width: $dimension--xl) {
-      @content;
-    }
-  }
-  // #  Breakpoint 7 - Extra Extra Large - 140rem / 2240px
-  @else if $breakpoint == xxl {
-    @media (min-width: $dimension--xxl) {
-      @content;
-    }
-  }
-  // #  Invalid arguments!
-  @else {
-    @error '#{$breakpoint} is an unsupported breakpoint, choose betweens: xxs, xs, s, m, l, xl, xxl.';
-  }
-}
-
-// -----------------------------------------------------------------------------
-// *  Box-Shadows
-// -----------------------------------------------------------------------------
-
-// #  Material Design Box-Shadow
-@mixin box-shadow($box-shadow--level: 1) {
-  // #  Box-Shadow Level 1
-  @if $box-shadow--level == 1 {
-    box-shadow: $box-shadow--level-1;
-  }
-  // #  Box-Shadow Level 2
-  @else if $box-shadow--level == 2 {
-    box-shadow: $box-shadow--level-2;
-  }
-  // #  Box-Shadow Level 3
-  @else if $box-shadow--level == 3 {
-    box-shadow: $box-shadow--level-3;
-  }
-  // #  Box-Shadow Level 4
-  @else if $box-shadow--level == 4 {
-    box-shadow: $box-shadow--level-4;
-  }
-  // #  Box-Shadow Level 5
-  @else if $box-shadow--level == 5 {
-    box-shadow: $box-shadow--level-5;
-  }
-  // #  Invalid arguments!
-  @else {
-    @error '#{$box-shadow--level} is an unsupported box-shadow, choose between: 1,2,3,4,5.';
-  }
-}
+// #  Import all mixin
+@import 'mixins/containers';
+@import 'mixins/breakpoints';
+@import 'mixins/box-shadows';
