--- a/assets/styles/scss/layout/_article.scss
+++ b/assets/styles/scss/layout/_article.scss
@@ -1,12 +1,7 @@
 /* -------------------------------------------------------------------------- *\
-*  _article.scss: This partial file contains all 'article' styles.
+*  _article.scss: This partial file contains all default 'article' styles.
 \* -------------------------------------------------------------------------- */
 
-// -  <<----------<< Generic >>---------->>
-
 article {
-  @include article;
   // ...
 }
-
-// -  <<----------<< Specific >>---------->>
