--- a/assets/styles/scss/layout/_aside.scss
+++ b/assets/styles/scss/layout/_aside.scss
@@ -1,12 +1,7 @@
 /* -------------------------------------------------------------------------- *\
-*  _aside.scss: This partial file contains all 'aside' styles.
+*  _aside.scss: This partial file contains all default 'aside' styles.
 \* -------------------------------------------------------------------------- */
 
-// -  <<----------<< Generic >>---------->>
-
 aside {
-  @include aside;
   // ...
 }
-
-// -  <<----------<< Specific >>---------->>
