--- a/assets/styles/scss/layout/_forms.scss
+++ b/assets/styles/scss/layout/_forms.scss
@@ -1,42 +1,31 @@
 /* -------------------------------------------------------------------------- *\
-*  _forms.scss: This partial file contains all 'forms' styles.
+*  _forms.scss: This partial file contains all default 'forms' styles.
 \* -------------------------------------------------------------------------- */
 
-// -  <<----------<< Generic >>---------->>
-
 form {
-  @include form;
   // ...
 }
 
 fieldset {
-  @include fieldset;
   // ...
 }
 
 legend {
-  @include legend;
   // ...
 }
 
 textarea {
-  @include textarea;
   // ...
 }
 
 label {
-  @include label;
   // ...
 }
 
 button {
-  @include button;
   // ...
 }
 
 input {
-  @include input;
   // ...
 }
-
-// -  <<----------<< Specific >>---------->>
