--- a/assets/styles/scss/layout/_header.scss
+++ b/assets/styles/scss/layout/_header.scss
@@ -1,92 +1,7 @@
 /* -------------------------------------------------------------------------- *\
-*  _header.scss: This partial file contains all 'header' styles.
+*  _header.scss: This partial file contains all default 'header' styles.
 \* -------------------------------------------------------------------------- */
 
-// -  <<----------<< Generic >>---------->>
-
 header {
-  @include header;
   // ...
 }
-
-// -  <<----------<< Specific >>---------->>
-
-// -  <<----------<< Old >>---------->>
-
-// .topnav {
-//   overflow: hidden;
-//   background-color: #e9e9e9;
-// }
-
-// .topnav a {
-//   display: block;
-//   padding: 14px 16px;
-//   color: black;
-//   float: left;
-//   font-size: 17px;
-//   text-align: center;
-//   text-decoration: none;
-// }
-
-// .topnav a:hover {
-//   background-color: #ddd;
-//   color: black;
-// }
-
-// .topnav a.active {
-//   background-color: #2196f3;
-//   color: white;
-// }
-
-// .topnav .search-container {
-//   display: flex;
-//   justify-content: flex-end;
-// }
-
-// .topnav input[type='text'] {
-//   padding: 6px;
-//   border: 0;
-//   margin-top: 8px;
-//   font-size: 17px;
-// }
-
-// .topnav .search-container button {
-//   padding: 6px 10px;
-//   border: 0;
-//   margin-top: 8px;
-//   margin-right: 16px;
-//   background: #ddd;
-//   cursor: pointer;
-//   float: right;
-//   font-size: 17px;
-// }
-
-// .topnav .search-container button:hover {
-//   background: #ccc;
-// }
-
-// @include breakpoint(xsm) {
-//   .topnav .search-container {
-//     display: block;
-//     width: 100%;
-//   }
-
-//   label.theme-switch {
-//     margin: 8px;
-//   }
-
-//   .topnav a,
-//   .topnav input[type='text'],
-//   .topnav .search-container button {
-//     display: block;
-//     width: 100%;
-//     padding: 14px;
-//     margin: 0;
-//     float: none;
-//     text-align: left;
-//   }
-
-//   .topnav input[type='text'] {
-//     border: 1px solid #ccc;
-//   }
-// }
