--- a/assets/styles/scss/layout/_table.scss
+++ b/assets/styles/scss/layout/_table.scss
@@ -1,12 +1,7 @@
 /* -------------------------------------------------------------------------- *\
-*  _table.scss: This partial file contains all 'table' styles.
+*  _table.scss: This partial file contains default 'table' styles.
 \* -------------------------------------------------------------------------- */
 
-// -  <<----------<< Generic >>---------->>
-
 table {
-  @include table;
   // ...
 }
-
-// -  <<----------<< Specific >>---------->>
