--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -16,7 +16,7 @@
 /* ========================================================================== *\
 +  PARTIAL SCSS GROUP 2 - `vendors/`
 \* ========================================================================== */
-@import 'vendors/normalize';
+@import 'vendors/modern-normalize';
 
 /* ========================================================================== *\
 +  PARTIAL SCSS GROUP 3 - `base/`
