--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -3,6 +3,14 @@
 \* -------------------------------------------------------------------------- */
 
 /* -------------------------------------------------------------------------- *\
+-  Header-Main: Header
+\* -------------------------------------------------------------------------- */
+
+.header {
+  // ...
+}
+
+/* -------------------------------------------------------------------------- *\
 -  Section-1: Hero
 \* -------------------------------------------------------------------------- */
 
@@ -23,5 +31,13 @@
 \* -------------------------------------------------------------------------- */
 
 .about {
+  // ...
+}
+
+/* -------------------------------------------------------------------------- *\
+-  Footer-Main: Footer
+\* -------------------------------------------------------------------------- */
+
+.footer {
   // ...
 }
