--- a/assets/styles/scss/layout/_footer.scss
+++ b/assets/styles/scss/layout/_footer.scss
@@ -1,105 +1,7 @@
 /* -------------------------------------------------------------------------- *\
-*  _footer.scss: This partial file contains all 'footer' styles.
+*  _footer.scss: This partial file contains all default 'footer' styles.
 \* -------------------------------------------------------------------------- */
 
-// -  <<----------<< Generic >>---------->>
-
 footer {
-  @include footer;
   // ...
-}
-
-// -  <<----------<< Specific >>---------->>
-
-.footer {
-  width: 100%;
-  box-sizing: border-box;
-  padding: 45px 50px;
-  background-color: #292c2f;
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-  font: normal 16px sans-serif;
-  text-align: left;
-}
-
-.footer .footer-left p {
-  margin: 0;
-  color: #8f9296;
-  font-size: 14px;
-}
-
-/* Footer links */
-
-.footer p.footer-links {
-  padding: 0;
-  margin: 0 0 10px;
-  color: #fff;
-  font-size: 18px;
-  font-weight: bold;
-  transition: ease 0.25s;
-}
-
-.footer p.footer-links a {
-  display: inline-block;
-  color: inherit;
-  line-height: 1.8;
-  text-decoration: none;
-  transition: ease 0.25s;
-}
-
-.footer .footer-links a::before {
-  left: 0;
-  display: inline-block;
-  padding-right: 5px;
-  color: #fff;
-  content: '·';
-  font-size: 20px;
-}
-
-.footer .footer-links .link-1::before {
-  content: none;
-}
-
-.footer .footer-right {
-  max-width: 180px;
-  margin-top: 6px;
-  float: right;
-}
-
-.footer .footer-right a {
-  display: inline-block;
-  width: 35px;
-  height: 35px;
-  margin-left: 3px;
-  background-color: #33383b;
-  border-radius: 2px;
-  color: #fff;
-  font-size: 20px;
-  line-height: 35px;
-  text-align: center;
-  transition: all 0.25s;
-}
-
-.footer .footer-right a:hover {
-  transform: scale(1.1);
-}
-
-.footer p.footer-links a:hover {
-  text-decoration: underline;
-}
-
-/* Media Queries */
-@include breakpoint(xs) {
-  .footer .footer-left,
-  .footer .footer-right {
-    text-align: center;
-  }
-
-  .footer .footer-right {
-    margin: 0 auto 20px;
-    float: none;
-  }
-
-  .footer .footer-left p.footer-links {
-    line-height: 1.8;
-  }
 }
